# dao-browser

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  DESIGN.md  LICENSE  README.md  TODOS.md  dao.json  i18n.sh  package-lock.json  package.json  tsconfig.json  vendor.config.ts  vitest.config.ts
configs/: common.gn  macos.gn
src/dao/browser/agent/: BUILD.gn  dao_agent_lock_tab_helper.cc  dao_agent_lock_tab_helper.h  dao_agent_memory_service.cc  dao_agent_memory_service.h  dao_agent_memory_service_factory.cc  dao_agent_memory_service_factory.h  dao_agent_memory_store.cc  dao_agent_memory_store.h  dao_agent_memory_store_unittest.cc  dao_agent_memory_types.cc  dao_agent_memory_types.h  dao_agent_proactive_engine.cc  dao_agent_proactive_engine.h  dao_agent_proactive_engine_unittest.cc  dao_agent_proactive_ranker.cc  dao_agent_proactive_ranker.h  dao_agent_proactive_ranker_unittest.cc  dao_agent_proactive_types.h  dao_agent_scenario_registry.cc  dao_agent_scenario_registry.h  dao_agent_scenario_registry_unittest.cc  dao_agent_skill_service.cc  dao_agent_skill_service.h  dao_agent_skill_service_factory.cc  dao_agent_skill_service_factory.h  dao_agent_skill_types.cc  dao_agent_skill_types.h  dao_agent_workspace_service.cc  dao_agent_workspace_service.h  dao_agent_workspace_service_factory.cc  dao_agent_workspace_service_factory.h  dao_agent_workspace_service_unittest.cc  dao_agent_workspace_types.cc  dao_agent_workspace_types.h  dao_dream_browsertest.cc  dao_dream_domain_utils.cc  dao_dream_domain_utils.h  dao_dream_material_collector.cc  dao_dream_material_collector.h  (+6 more)
src/dao/browser/agent/workspace/: path_normalizer.cc  path_normalizer.h  path_normalizer_unittest.cc  text_only_filter.cc  text_only_filter.h  text_only_filter_unittest.cc  v4a_patch_applier.cc  v4a_patch_applier.h  v4a_patch_applier_unittest.cc  v4a_patch_parser.cc  v4a_patch_parser.h  v4a_patch_parser_unittest.cc  workspace_audit.cc  workspace_audit.h  workspace_audit_unittest.cc  workspace_index.cc  workspace_index.h  workspace_index_unittest.cc  workspace_quota.cc  workspace_quota.h  workspace_quota_unittest.cc
src/dao/browser/extensions/legacy_mv2/: BUILD.gn  README.md  dao_mv2_api_router.cc  dao_mv2_api_router.h  dao_mv2_browsertest.cc  dao_mv2_features.cc  dao_mv2_features.h  dao_mv2_install_notice.cc  dao_mv2_install_notice.h  dao_mv2_pref_defaults.cc  dao_mv2_pref_defaults.h
src/dao/browser/qrcode/: BUILD.gn  dao_qr_code_decoder.cc  dao_qr_code_decoder.h  dao_qr_code_decoder_unittest.cc  dao_qr_code_types.h
src/dao/browser/strings/: BUILD.gn  dao_strings.grd
src/dao/browser/strings/translations/: dao_strings_af.xtb  dao_strings_am.xtb  dao_strings_ar.xtb  dao_strings_as.xtb  dao_strings_az.xtb  dao_strings_be.xtb  dao_strings_bg.xtb  dao_strings_bn.xtb  dao_strings_bs.xtb  dao_strings_ca.xtb  dao_strings_cs.xtb  dao_strings_cy.xtb  dao_strings_da.xtb  dao_strings_de.xtb  dao_strings_el.xtb  dao_strings_en-GB.xtb  dao_strings_es-419.xtb  dao_strings_es.xtb  dao_strings_et.xtb  dao_strings_eu.xtb  dao_strings_fa.xtb  dao_strings_fi.xtb  dao_strings_fil.xtb  dao_strings_fr-CA.xtb  dao_strings_fr.xtb  dao_strings_gl.xtb  dao_strings_gu.xtb  dao_strings_hi.xtb  dao_strings_hr.xtb  dao_strings_hu.xtb  dao_strings_hy.xtb  dao_strings_id.xtb  dao_strings_is.xtb  dao_strings_it.xtb  dao_strings_iw.xtb  dao_strings_ja.xtb  dao_strings_ka.xtb  dao_strings_kk.xtb  dao_strings_km.xtb  dao_strings_kn.xtb  (+41 more)
src/dao/browser/telemetry/: BUILD.gn  dao_telemetry_service.cc  dao_telemetry_service.h
src/dao/browser/ui/: dao_ui_sources.gni
src/dao/browser/ui/views/: dao_address_bar_view.cc  dao_address_bar_view.h  dao_agent_cursor_view.cc  dao_agent_cursor_view.h  dao_agent_lock_banner_view.cc  dao_agent_lock_banner_view.h  dao_agent_sidebar_view.cc  dao_agent_sidebar_view.h  dao_browser_browsertest.cc  dao_colors.cc  dao_colors.h  dao_command_bar_view.cc  dao_command_bar_view.h  dao_control_center_button.cc  dao_control_center_button.h  dao_control_center_extensions_section.cc  dao_control_center_extensions_section.h  dao_control_center_more_menu.cc  dao_control_center_more_menu.h  dao_control_center_popup.cc  dao_control_center_popup.h  dao_control_center_qr_view.cc  dao_control_center_qr_view.h  dao_control_center_utility_section.cc  dao_control_center_utility_section.h  dao_corner_overlay_view.cc  dao_corner_overlay_view.h  dao_cross_window_drag.cc  dao_cross_window_drag.h  dao_extension_action_icon.cc  dao_extension_action_icon.h  dao_load_progress_controller.cc  dao_load_progress_controller.h  dao_load_progress_view.cc  dao_load_progress_view.h  dao_lucide_icons.cc  dao_lucide_icons.h  dao_native_share_mac.h  dao_native_share_mac.mm  dao_native_util_mac.h  (+17 more)
src/dao/browser/ui/views/little_dao/: dao_little_dao_controller.cc  dao_little_dao_controller.h  dao_little_dao_view.cc  dao_little_dao_view.h  dao_mini_dao_download_card_view.cc  dao_mini_dao_download_card_view.h  dao_mini_dao_site_center_popup.cc  dao_mini_dao_site_center_popup.h
src/dao/browser/ui/views/sidebar/: dao_download_button_view.cc  dao_download_button_view.h  dao_download_flyout_view.cc  dao_download_flyout_view.h  dao_favorites_view.cc  dao_favorites_view.h  dao_file_icon_util_mac.h  dao_file_icon_util_mac.mm  dao_new_tab_button.cc  dao_new_tab_button.h  dao_sidebar_section_view.cc  dao_sidebar_section_view.h  dao_sidebar_view.cc  dao_sidebar_view.h  dao_tab_item_view.cc  dao_tab_item_view.h  dao_tab_list_view.cc  dao_tab_list_view.h  dao_tab_tooltip_view.cc  dao_tab_tooltip_view.h
src/dao/browser/ui/views/split/: dao_split_divider_view.cc  dao_split_divider_view.h  (+6 more)
src/dao/browser/ui/webui/: dao_agent_ui.cc  dao_agent_ui.h  dao_pinned_tab_model.cc  dao_pinned_tab_model.h  dao_pinned_tab_model_unittest.cc  dao_pinned_tab_storage.cc  dao_pinned_tab_storage.h  dao_sidebar_ui.cc  dao_sidebar_ui.h  dao_welcome_ui.cc  dao_welcome_ui.h
src/dao/browser/updater/: BUILD.gn  dao_sparkle_update_session_state.cc  dao_sparkle_update_session_state.h  dao_sparkle_updater_mac.h  dao_sparkle_updater_mac.mm  dao_updater_service.cc  dao_updater_service.h
(+610 files in other folders)
