is_debug = false
is_component_build = false
is_official_build = true
target_cpu = "arm64"

# No PGO profiles in checkout; required when is_official_build is true.
chrome_pgo_phase = 0

proprietary_codecs = true
ffmpeg_branding = "Chrome"

enable_nacl = false
fatal_linker_warnings = false

google_api_key = ""
google_default_client_id = ""
google_default_client_secret = ""

# Disable telemetry and reporting
enable_reporting = false
safe_browsing_mode = 1
fieldtrial_testing_like_official_build = true
