# Copyright 2026 Dao Browser. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

dao_browser_ui_sources = [
  "//dao/browser/agent/dao_agent_lock_tab_helper.cc",
  "//dao/browser/agent/dao_agent_lock_tab_helper.h",
  "//dao/browser/agent/dao_agent_memory_service.cc",
  "//dao/browser/agent/dao_agent_memory_service.h",
  "//dao/browser/agent/dao_agent_memory_service_factory.cc",
  "//dao/browser/agent/dao_agent_memory_service_factory.h",
  "//dao/browser/agent/dao_agent_memory_store.cc",
  "//dao/browser/agent/dao_agent_memory_store.h",
  "//dao/browser/agent/dao_agent_memory_types.cc",
  "//dao/browser/agent/dao_agent_memory_types.h",
  "//dao/browser/agent/dao_agent_proactive_engine.cc",
  "//dao/browser/agent/dao_agent_proactive_engine.h",
  "//dao/browser/agent/dao_agent_proactive_ranker.cc",
  "//dao/browser/agent/dao_agent_proactive_ranker.h",
  "//dao/browser/agent/dao_agent_proactive_types.h",
  "//dao/browser/agent/dao_agent_scenario_registry.cc",
  "//dao/browser/agent/dao_agent_scenario_registry.h",
  "//dao/browser/agent/dao_agent_skill_service.cc",
  "//dao/browser/agent/dao_agent_skill_service.h",
  "//dao/browser/agent/dao_agent_skill_service_factory.cc",
  "//dao/browser/agent/dao_agent_skill_service_factory.h",
  "//dao/browser/agent/dao_agent_skill_types.cc",
  "//dao/browser/agent/dao_agent_skill_types.h",
  "//dao/browser/agent/dao_agent_workspace_service.cc",
  "//dao/browser/agent/dao_agent_workspace_service.h",
  "//dao/browser/agent/dao_agent_workspace_service_factory.cc",
  "//dao/browser/agent/dao_agent_workspace_service_factory.h",
  "//dao/browser/agent/dao_agent_workspace_types.cc",
  "//dao/browser/agent/dao_agent_workspace_types.h",
  "//dao/browser/agent/dao_dream_domain_utils.cc",
  "//dao/browser/agent/dao_dream_domain_utils.h",
  "//dao/browser/agent/dao_dream_material_collector.cc",
  "//dao/browser/agent/dao_dream_material_collector.h",
  "//dao/browser/agent/dao_dream_service.cc",
  "//dao/browser/agent/dao_dream_service.h",
  "//dao/browser/agent/dao_dream_service_factory.cc",
  "//dao/browser/agent/dao_dream_service_factory.h",
  "//dao/browser/agent/workspace/path_normalizer.cc",
  "//dao/browser/agent/workspace/path_normalizer.h",
  "//dao/browser/agent/workspace/text_only_filter.cc",
  "//dao/browser/agent/workspace/text_only_filter.h",
  "//dao/browser/agent/workspace/v4a_patch_applier.cc",
  "//dao/browser/agent/workspace/v4a_patch_applier.h",
  "//dao/browser/agent/workspace/v4a_patch_parser.cc",
  "//dao/browser/agent/workspace/v4a_patch_parser.h",
  "//dao/browser/agent/workspace/workspace_audit.cc",
  "//dao/browser/agent/workspace/workspace_audit.h",
  "//dao/browser/agent/workspace/workspace_index.cc",
  "//dao/browser/agent/workspace/workspace_index.h",
  "//dao/browser/agent/workspace/workspace_quota.cc",
  "//dao/browser/agent/workspace/workspace_quota.h",
  "//dao/browser/dao_auto_pip_visibility_helper.cc",
  "//dao/browser/dao_auto_pip_visibility_helper.h",
  "//dao/browser/dao_pref_names.cc",
  "//dao/browser/dao_pref_names.h",
  "//dao/browser/dao_webstore_branding_tab_helper.cc",
  "//dao/browser/dao_webstore_branding_tab_helper.h",
  "//dao/browser/pip/dao_pip_bounds_prefs.cc",
  "//dao/browser/pip/dao_pip_bounds_prefs.h",
  "//dao/browser/pip/dao_pip_interceptor.cc",
  "//dao/browser/pip/dao_pip_interceptor.h",
  "//dao/browser/pip/dao_pip_site_rules.cc",
  "//dao/browser/pip/dao_pip_site_rules.h",
  "//dao/browser/ui/views/dao_address_bar_view.cc",
  "//dao/browser/ui/views/dao_address_bar_view.h",
  "//dao/browser/ui/views/dao_agent_cursor_view.cc",
  "//dao/browser/ui/views/dao_agent_cursor_view.h",
  "//dao/browser/ui/views/dao_agent_lock_banner_view.cc",
  "//dao/browser/ui/views/dao_agent_lock_banner_view.h",
  "//dao/browser/ui/views/dao_agent_sidebar_view.cc",
  "//dao/browser/ui/views/dao_agent_sidebar_view.h",
  "//dao/browser/ui/views/dao_colors.cc",
  "//dao/browser/ui/views/dao_colors.h",
  "//dao/browser/ui/views/dao_command_bar_view.cc",
  "//dao/browser/ui/views/dao_command_bar_view.h",
  "//dao/browser/ui/views/dao_control_center_button.cc",
  "//dao/browser/ui/views/dao_control_center_button.h",
  "//dao/browser/ui/views/dao_control_center_extensions_section.cc",
  "//dao/browser/ui/views/dao_control_center_extensions_section.h",
  "//dao/browser/ui/views/dao_control_center_more_menu.cc",
  "//dao/browser/ui/views/dao_control_center_more_menu.h",
  "//dao/browser/ui/views/dao_control_center_popup.cc",
  "//dao/browser/ui/views/dao_control_center_popup.h",
  "//dao/browser/ui/views/dao_control_center_qr_view.cc",
  "//dao/browser/ui/views/dao_control_center_qr_view.h",
  "//dao/browser/ui/views/dao_control_center_utility_section.cc",
  "//dao/browser/ui/views/dao_control_center_utility_section.h",
  "//dao/browser/ui/views/dao_corner_overlay_view.cc",
  "//dao/browser/ui/views/dao_corner_overlay_view.h",
  "//dao/browser/ui/views/dao_cross_window_drag.cc",
  "//dao/browser/ui/views/dao_cross_window_drag.h",
  "//dao/browser/ui/views/dao_load_progress_controller.cc",
  "//dao/browser/ui/views/dao_load_progress_controller.h",
  "//dao/browser/ui/views/dao_load_progress_view.cc",
  "//dao/browser/ui/views/dao_load_progress_view.h",
  "//dao/browser/ui/views/dao_lucide_icons.cc",
  "//dao/browser/ui/views/dao_lucide_icons.h",
  "//dao/browser/ui/views/dao_native_share_mac.h",
  "//dao/browser/ui/views/dao_native_share_mac.mm",
  "//dao/browser/ui/views/dao_native_util_mac.h",
  "//dao/browser/ui/views/dao_native_util_mac.mm",
  "//dao/browser/ui/views/dao_pinned_extensions_container.cc",
  "//dao/browser/ui/views/dao_pinned_extensions_container.h",
  "//dao/browser/ui/views/dao_qr_code_image.cc",
  "//dao/browser/ui/views/dao_qr_code_image.h",
  "//dao/browser/ui/views/dao_qr_code_result_dialog_view.cc",
  "//dao/browser/ui/views/dao_qr_code_result_dialog_view.h",
  "//dao/browser/ui/views/dao_suggestion_item_view.cc",
  "//dao/browser/ui/views/dao_suggestion_item_view.h",
  "//dao/browser/ui/views/dao_system_dialog.cc",
  "//dao/browser/ui/views/dao_system_dialog.h",
  "//dao/browser/ui/views/dao_tab_identity.cc",
  "//dao/browser/ui/views/dao_tab_identity.h",
  "//dao/browser/ui/views/dao_toast_view.cc",
  "//dao/browser/ui/views/dao_toast_view.h",
  "//dao/browser/ui/views/little_dao/dao_little_dao_controller.cc",
  "//dao/browser/ui/views/little_dao/dao_little_dao_controller.h",
  "//dao/browser/ui/views/little_dao/dao_little_dao_view.cc",
  "//dao/browser/ui/views/little_dao/dao_little_dao_view.h",
  "//dao/browser/ui/views/little_dao/dao_mini_dao_download_card_view.cc",
  "//dao/browser/ui/views/little_dao/dao_mini_dao_download_card_view.h",
  "//dao/browser/ui/views/little_dao/dao_mini_dao_site_center_popup.cc",
  "//dao/browser/ui/views/little_dao/dao_mini_dao_site_center_popup.h",
  "//dao/browser/ui/views/sidebar/dao_download_flyout_view.cc",
  "//dao/browser/ui/views/sidebar/dao_download_flyout_view.h",
  "//dao/browser/ui/views/sidebar/dao_file_icon_util_mac.h",
  "//dao/browser/ui/views/sidebar/dao_file_icon_util_mac.mm",
  "//dao/browser/ui/views/sidebar/dao_sidebar_view.cc",
  "//dao/browser/ui/views/sidebar/dao_sidebar_view.h",
  "//dao/browser/ui/views/sidebar/dao_tab_tooltip_view.cc",
  "//dao/browser/ui/views/sidebar/dao_tab_tooltip_view.h",
  "//dao/browser/ui/views/split/dao_split_divider_view.cc",
  "//dao/browser/ui/views/split/dao_split_divider_view.h",
  "//dao/browser/ui/views/split/dao_split_node.cc",
  "//dao/browser/ui/views/split/dao_split_node.h",
  "//dao/browser/ui/views/split/dao_split_pane_view.cc",
  "//dao/browser/ui/views/split/dao_split_pane_view.h",
  "//dao/browser/ui/views/split/dao_split_view.cc",
  "//dao/browser/ui/views/split/dao_split_view.h",
  "//dao/browser/ui/webui/dao_agent_ui.cc",
  "//dao/browser/ui/webui/dao_agent_ui.h",
  "//dao/browser/ui/webui/dao_pinned_tab_model.cc",
  "//dao/browser/ui/webui/dao_pinned_tab_model.h",
  "//dao/browser/ui/webui/dao_pinned_tab_storage.cc",
  "//dao/browser/ui/webui/dao_pinned_tab_storage.h",
  "//dao/browser/ui/webui/dao_sidebar_ui.cc",
  "//dao/browser/ui/webui/dao_sidebar_ui.h",
  "//dao/browser/ui/webui/dao_welcome_ui.cc",
  "//dao/browser/ui/webui/dao_welcome_ui.h",
]

dao_browser_ui_deps = [
  "//components/favicon/content",
  "//components/pdf/browser",
  "//components/qr_code_generator",
  "//dao/browser/extensions/legacy_mv2:dao_legacy_mv2",
  "//dao/browser/qrcode:qr_decoder",
  "//dao/browser/strings:dao_strings",
  "//dao/browser/ui/webui/resources/agent:resources",
  "//dao/browser/ui/webui/resources/sidebar:resources",
  "//dao/browser/ui/webui/resources/welcome:resources",
  "//sql",
]

dao_browser_ui_test_sources = [
  "//dao/browser/agent/dao_dream_browsertest.cc",
  "//dao/browser/ui/views/dao_browser_browsertest.cc",
  "//dao/browser/ui/webui/dao_pinned_tab_model_unittest.cc",
]

dao_browser_ui_mac_test_sources = [
  "//dao/browser/ui/views/dao_test_init_mac.mm",
]

dao_browser_ui_test_deps = [
  "//components/qr_code_generator",
  "//dao/browser/updater:dao_updater",
]
