# Copyright 2026 Dao Browser Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//ui/webui/resources/tools/build_webui.gni")

build_webui("build") {
  grd_prefix = "dao_agent"

  static_files = [
    "agent.css",
    "agent.html",
  ]

  non_web_component_files = [
    "agent.ts",
    "agent_bridge.ts",
    "dao_agent_app.ts",
    "dao_chat_view.ts",
    "dao_settings_view.ts",
    "markdown_renderer.ts",
    "readability_bundle.ts",
  ]

  ts_definitions = [ "//tools/typescript/definitions/chrome_send.d.ts" ]
  ts_deps = [
    "//third_party/lit/v3_0:build_ts",
    "//ui/webui/resources/js:build_ts",
  ]
}
