# Copyright 2026 Dao Browser Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//ui/webui/resources/tools/build_webui.gni")
import("i18n/i18n_locale_files.gni")

build_webui("build") {
  grd_prefix = "dao_agent"

  # vendor/pi_web_ui.css is a precompiled Tailwind bundle; skip stylelint.
  disable_css_lint = true

  # Dao TS is not authored to upstream Lit element-structure rules.
  enable_type_aware_eslint_checks = false

  static_files = [
    "agent.css",
    "agent.html",
    "skills.html",
    # PR3 spike: pre-compiled Tailwind CSS shipped with pi-web-ui. Loaded
    # via <link> from agent.html. See vendor/pi-web-ui-css.build.mjs.
    "vendor/pi_web_ui.css",
  ]

  ts_files = [
    "agent.ts",
    "agent_bridge.ts",
    "dao_agent_app.ts",
    "dao_chat_history_panel.ts",
    "dao_chat_view.ts",
    "dao_compact.ts",
    "dao_settings_view.ts",
    "dao_skill_manager_view.ts",
    "dao_tool_renderer.ts",
    "llm_config.ts",
    "model_capabilities.ts",
    "pi_app_storage.ts",
    "pi_llm_stream.ts",
    "pi_tool_adapter.ts",
    "readability_bundle.ts",
    "skill_registry.ts",
    "skills.ts",
    "tool_catalog.ts",
    "turndown_bundle.ts",
    "dao_page_capture.ts",
    "dao_share_image.ts",
    "web_search/circuit_breaker.ts",
    "web_search/index.ts",
    "web_search/provider_capabilities.ts",
    "web_search/service.ts",
    "web_search/tier_duckduckgo.ts",
    "web_search/tier_jina.ts",
    "web_search/tier_provider.ts",
    "web_search/types.ts",
    "workspace/bridge.ts",
    "workspace/types.ts",
    # Vendored bundle — generated by `npm run vendor`. DO NOT EDIT BY HAND.
    # Committed as `.ts` with `@ts-nocheck` so it flows through build_webui's
    # ts_library (static_files rejects raw `.js`). See vendor/README.md.
    "vendor/pi_runtime_bundle.ts",
  ]

  # Append every Dao locale dictionary. The list lives in the generated
  # i18n_locale_files.gni so adding/removing locales is a one-script change.
  ts_files += dao_i18n_locale_ts_files

  ts_definitions = [ "//tools/typescript/definitions/chrome_send.d.ts" ]
  ts_deps = [
    "//third_party/lit/v3_0:build_ts",
    "//ui/webui/resources/js:build_ts",
  ]
}
