# Copyright 2026 Dao Browser Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//ui/webui/resources/tools/build_webui.gni")

build_webui("build") {
  grd_prefix = "dao_sidebar"

  static_files = [
    "sidebar.css",
    "sidebar.html",
  ]

  non_web_component_files = [
    "sidebar.ts",
    "sidebar_bridge.ts",
    "dao_sidebar_app.ts",
    "dao_new_tab_button.ts",
    "dao_sidebar_section.ts",
    "dao_favorites_view.ts",
    "dao_tab_list.ts",
    "dao_tab_item.ts",
    "dao_download_button.ts",
    "dao_folder_item.ts",
    "dao_folder_model.ts",
  ]

  ts_definitions = [ "//tools/typescript/definitions/chrome_send.d.ts" ]
  ts_deps = [
    "//third_party/lit/v3_0:build_ts",
    "//ui/webui/resources/js:build_ts",
  ]
}
