# Copyright 2026 Dao Browser Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//ui/webui/resources/tools/build_webui.gni")

build_webui("build") {
  grd_prefix = "dao_welcome"

  # Dao CSS is not authored to the upstream @stylistic rules.
  disable_css_lint = true

  # Dao TS is not authored to upstream Lit element-structure rules.
  enable_type_aware_eslint_checks = false

  static_files = [
    "welcome.css",
    "welcome.html",
  ]

  ts_files = [
    "welcome.ts",
    "welcome_bridge.ts",
    "dao_welcome_app.ts",
  ]

  ts_definitions = [ "//tools/typescript/definitions/chrome_send.d.ts" ]
  ts_deps = [
    "//third_party/lit/v3_0:build_ts",
    "//ui/webui/resources/js:build_ts",
  ]
}
